Add robots.txt, css map

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
 	"recommendations": [
+		"Gesugao-san.general-purpose-extension-pack",
 		"tht13.html-preview-vscode",
-		"ecmel.vscode-html-css",
-		"Gesugao-san.general-purpose-extension-pack"
+		"ecmel.vscode-html-css"
 	]
 }
