--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,13 +5,17 @@
 			"label": "Update submodules",
 			"type": "shell",
 			"command": "cd \"${workspaceFolder}\\submodules\\ss13-projects-data\" && git submodule init && git submodule update && git status",
-			"problemMatcher": [],
+			"problemMatcher": []
 		},
 		{
 			"label": "Start http-server",
 			"type": "shell",
 			"command": "node .\\node_modules\\http-server\\bin\\http-server",
 			"problemMatcher": [],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]}
 
